@@ -62,6 +62,7 @@ enum
     FCS_OPT_READ_FROM_FILE,
     FCS_OPT_LOAD_CONFIG,
     FCS_OPT_DEPTH_TESTS_ORDER,
+    FCS_OPT_DEPTH_TESTS_ORDER_2,
     FCS_OPT_SET_PRUNING,
     FCS_OPT_CACHE_LIMIT,
     FCS_OPT_FLARES_CHOICE,
